mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
   replicas: 1
   selector:
     matchLabels:
       app: mysql
   template:
     metadata:
       labels:
         app: mysql
     spec:
       containers:
         - name: mysql
           image: mariadb:10.6.4-focal
           command: ['--default-authentication-plugin=mysql_native_password']
